rfp_css/style.css
@charset "utf-8";
/* CSS Document */

body {
  margin: 0 auto;
  padding: 0px;
  font-family: "Work Sans", sans-serif;
}
a:hover {
  text-decoration: none;
}
ul {
  list-style: none;
  margin: 0px;
  padding: 0px;
}
h1 {
  font-size: 35px;
  font-family: "Work Sans", sans-serif;
}
h2 {
  font-size: 18px;
  font-family: "Work Sans", sans-serif;
  font-weight: 400;
}
p,
span,
li,
ul {
  font-family: "Work Sans", sans-serif;
}
.colr-black {
  color: #124559 !important;
  font-weight: 300;
}
.colr-yellow {
  background-color: #f9b348 !important;
}
a:hover {
  text-decoration: none !important;
}
.nopadding {
  padding: 0px !important;
}
.txt-centr {
  text-align: center;
}
/* header css starts */
.container {
  width: 1029px !important;
}
#topheader .container {
  width: 1029px !important;
}
#topheader {
  background-color: #124559;
  width: 100%;
  height: 80px;
}
#topheader .navbar-inverse {
  display: inline-block;
  background-color: transparent;
  border-color: transparent;
  margin-bottom: 0px;
  border: 0px;
}
.logo {
  display: inline-block;
}
.logo-footer img {
  max-width: 241px;
}
.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:focus,
.navbar-inverse .navbar-nav > .active > a:hover {
  background-color: #fff !important;
  color: #f15a24 !important;
}
#topheader .navbar-nav > li > a {
  padding: 30px 17px !important;
  text-transform: uppercase;
  color: #fff;
  font-size: 13px;
  font-family: "Open Sans";
  font-weight: bold;
}

.logo img {
  float: right;
}

#banner {
  padding: 30px 0 35px;
  position: relative;
  background-color: #f15a24;
  z-index: -1;
}
#banner:before {
  content: "";
  position: absolute;
  left: 0;
  top: 66%;
  overflow: visible;
  width: 100%;
  height: 500px;
  background: #f9b348;
  z-index: -1;
  -webkit-transform: skewY(-16deg);
  -moz-transform: skewY(-16deg);
  -ms-transform: skewY(-16deg);
  -o-transform: skewY(-16deg);
  transform: skewY(-16deg);
  -webkit-backface-visibility: hidden;
  backface-visibility: initial;
}

#banner .container {
  width: 1125px;
  padding: 0px;
  margin: 0px auto;
}

#banner h1 {
  padding: 15px 63px;
  display: inline-block;
  border-radius: 42px;
  font-family: "Work Sans", sans-serif;
  font-weight: bold;
  background-color: #f2f2f2;
  color: #124559;
  -webkit-box-shadow: 5px 9px 0px -4px rgba(204, 204, 204, 1);
  -moz-box-shadow: 5px 9px 0px -4px rgba(204, 204, 204, 1);
  box-shadow: 5px 9px 0px -4px rgba(204, 204, 204, 1);
}
#banner font {
  color: #f15a24;
}
#banner span {
  color: #fff;
  font-size: 29px;
  letter-spacing: 1px;
  font-weight: 100;
  font-family: "Work Sans", sans-serif;
  display: block;
  padding-top: 19px;
  padding-left: 61px;
  line-height: 31px;
  padding-right: 80px;
}
.image {
  margin-left: -20%;
  margin-top: 100px;
}

#logos-sec {
  background-color: #54bcab;
}
.common-heading h2 {
  font-family: "Work Sans", sans-serif;
  font-size: 18px;
  color: #124559;
  text-transform: uppercase;
  text-align: center;
  margin: -21px auto 43px;
  background-color: #54bcab;
  z-index: 1;
  position: relative;
  width: 38%;
  font-weight: 300;
}
/*.common-heading h2:before{content: "";  width: 26%;  height: 1px;  background-color: #fff;  display: inline-block;
left: 120px;  margin: 10px auto;  position: absolute; }*/
.common-heading:before {
  content: "";
  width: 100%;
  height: 1px;
  background-color: #124559;
  display: inline-block;
  margin: 8px auto;
}

#sec-box h3 {
  color: #124559;
  font-family: "Work Sans", sans-serif;
  line-height: 29px;
  font-weight: 600;
}
#sec-box .common-heading:before,
#sec-box1 .common-heading:before {
  background-color: #000;
}
#logos-sec .common-heading {
  margin: 33px 0;
}
#logos-sec ul {
  margin: 25px 0;
  padding: 0;
  text-align: center;
}
#logos-sec ul li {
  display: inline-block;
  margin: 0 23px;
  text-align: center;
}
#sec-areas .common-heading h2 {
  background-color: #ffffff;
  width: 48%;
  font-weight: 300;
}
#sec-areas .contactsec h2 {
  width: 28%;
}
#sec-box {
  background-color: #f9b348;
  display: inline-block;
  width: 100%;
  padding: 20px 0;
  padding-bottom: 50px;
}
#sec-box .common-heading h2,
#sec-box1 .common-heading h2 {
  background-color: #f9b348;
}
#sec-box h3 {
  color: #124559;
  font-size: 18px;
  font-family: "Work Sans", sans-serif;
  font-weight: 100;
  margin: 0px 0 50px;
  line-height: 30px;
}
#sec-box .common-heading h2:before,
#sec-box .common-heading h2:after {
  background-color: #124559;
}
#sec-box1 .common-heading h2:before,
#sec-box1 .common-heading h2:after {
  background-color: #124559;
}
#sec-box .inner-points {
  background-color: #e46231;
  padding: 20px;
  padding-top: 0;
}
#sec-box .error-text {
  color: #ffffff;
  font-size: 16px;
  font-family: "Work Sans", sans-serif;
  font-weight: 300;
  line-height: 30px;
}
.box {
  text-align: center;
  margin: 0px;
  padding: 25px 0;
  border: 1px solid transparent;
}
.box p {
  color: #124559;
  line-height: 23px;
  font-family: "Work Sans", sans-serif;
  font-weight: 500;
  margin: 25px 0px 0;
  font-size: 15px;
  min-height: 106px;
}
.box button {
  background-color: #f15a24;
  width: 191px;
  height: 46px;
  border: none;
  font-family: "Work Sans", sans-serif;
  font-size: 18px;
  font-weight: 600;
  color: #fff;
  text-transform: uppercase;
}
#sec-areas .common-heading h2:before,
#sec-areas .common-heading h2:after {
  width: 20%;
}
.icon {
  min-height: 113px;
  display: inline-block;
}
#sec-box1 {
  display: inline-block;
  padding-top: 30px;
  width: 100%;
  position: relative;
  background-color: #fab349;
}
#sec-box1 .common-heading {
  margin: 0px;
}
.expert-sec-box ul li {
  display: inline-block;
  width: 16%;
  vertical-align: top;
  margin-left: 25px;
}
.colr-grey,
.colr-green,
.colr-yellow,
.colr-drk-grey {
  min-height: 256px;
}
.contactsec h2:before,
.contactsec h2:after {
  width: 30% !important;
}
.expert-sec-box {
  position: relative;
  z-index: 1000;
  padding-bottom: 35px;
  margin-top: 30px;
}
/* ... */

